revise layout to test skrollr on mobile

--- a/_pictures.jade
+++ b/_pictures.jade
@@ -6,62 +6,62 @@
         ul.clearing-thumbs.small-block-grid-2.medium-block-grid-4.large-block-grid-3(data-clearing='')
             li
                 a.th(href='/images/P1010314.jpg')
-                    img(data-caption='caption here…', src='/images/P1010314-th.jpg')
+                    img(src='/images/P1010314-th.jpg')
             li
                 a.th(href='/images/P1010705.jpg')
-                    img(data-caption='caption here…', src='/images/P1010705-th.jpg')
+                    img(src='/images/P1010705-th.jpg')
             li
                 a.th(href='/images/P1010729.jpg')
-                    img(data-caption='caption here…', src='/images/P1010729-th.jpg')
+                    img(src='/images/P1010729-th.jpg')
             li
                 a.th(href='/images/P1010713.jpg')
-                    img(data-caption='caption here…', src='/images/P1010713-th.jpg')
+                    img(src='/images/P1010713-th.jpg')
             li
                 a.th(href='/images/P1010760.jpg')
-                    img(data-caption='caption here…', src='/images/P1010760-th.jpg')
+                    img(src='/images/P1010760-th.jpg')
             li
                 a.th(href='/images/Vin18.jpg')
-                    img(data-caption='caption here…', src='/images/Vin18-th.jpg')
+                    img(src='/images/Vin18-th.jpg')
         h4 The House
         ul.clearing-thumbs.small-block-grid-2.medium-block-grid-4.large-block-grid-3(data-clearing='')
             li
                 a.th(href='/images/Vin1.jpg')
-                    img(data-caption='caption here…', src='/images/Vin1-th.jpg')
+                    img(src='/images/Vin1-th.jpg')
             li
                 a.th(href='/images/Vin2.jpg')
-                    img(data-caption='caption here…', src='/images/Vin2-th.jpg')
+                    img(src='/images/Vin2-th.jpg')
             li
                 a.th(href='/images/Vin3.jpg')
-                    img(data-caption='caption here…', src='/images/Vin3-th.jpg')
+                    img(src='/images/Vin3-th.jpg')
             li
                 a.th(href='/images/Vin4.jpg')
-                    img(data-caption='caption here…', src='/images/Vin4-th.jpg')
+                    img(src='/images/Vin4-th.jpg')
             li
                 a.th(href='/images/Vin5.jpg')
-                    img(data-caption='caption here…', src='/images/Vin5-th.jpg')
+                    img(src='/images/Vin5-th.jpg')
             li
                 a.th(href='/images/Vin6.jpg')
-                    img(data-caption='caption here…', src='/images/Vin6-th.jpg')
+                    img(src='/images/Vin6-th.jpg')
             li
                 a.th(href='/images/Vin9.jpg')
-                    img(data-caption='caption here…', src='/images/Vin9-th.jpg')
+                    img(src='/images/Vin9-th.jpg')
             li
                 a.th(href='/images/Vin10.jpg')
-                    img(data-caption='caption here…', src='/images/Vin10-th.jpg')
+                    img(src='/images/Vin10-th.jpg')
             li
                 a.th(href='/images/Vin12.jpg')
-                    img(data-caption='caption here…', src='/images/Vin12-th.jpg')
+                    img(src='/images/Vin12-th.jpg')
             li
                 a.th(href='/images/Vin17.jpg')
-                    img(data-caption='caption here…', src='/images/Vin17-th.jpg')
+                    img(src='/images/Vin17-th.jpg')
         h4 The Tatami Room
         ul.clearing-thumbs.small-block-grid-2.medium-block-grid-4.large-block-grid-3(data-clearing='')
             li
                 a.th(href='/images/Vin15.jpg')
-                    img(data-caption='caption here…', src='/images/Vin15-th.jpg')
+                    img(src='/images/Vin15-th.jpg')
             li
                 a.th(href='/images/Vin19.jpg')
-                    img(data-caption='caption here…', src='/images/Vin19-th.jpg')
+                    img(src='/images/Vin19-th.jpg')
             li
                 a.th(href='/images/Vin20.jpg')
-                    img(data-caption='caption here…', src='/images/Vin20-th.jpg')
+                    img(src='/images/Vin20-th.jpg')
