add border to #skrollr-body to see on mobile ***this accidently fixed the magellan ugly snap***

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -88,6 +88,11 @@ article {
 
 
 
+
+#skrollr-body { border-top: 1px solid green; }
+
+
+
 /* Section rules
    ------------------------------------------------------------------ */
 
