Remove skrollr on mobile to avoid mobile only conflicts

--- a/_pictures.jade
+++ b/_pictures.jade
@@ -6,7 +6,7 @@
         ul.clearing-thumbs.small-block-grid-2.medium-block-grid-4.large-block-grid-3(data-clearing='')
             li
                 a.th(href='/images/P1010314.jpg')
-                    img(src='/images/P1010314-th.jpg')
+                    img(data-caption='', src='/images/P1010314-th.jpg')
             li
                 a.th(href='/images/P1010705.jpg')
                     img(src='/images/P1010705-th.jpg')
