add meta for seo

--- a/_layout.jade
+++ b/_layout.jade
@@ -3,8 +3,9 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1, minimal-ui")
-        title
-            | Treehouse Vincentia. A retreat holiday house available to rent in Jervis Bay, New South Wales.
+        title Treehouse Vincentia, a luxury holiday house retreat in Jervis Bay, NSW
+        meta(description="Treehouse Vincentia. A luxury holiday house retreat available to rent in Jervis Bay, New South Wales. Are you looking for a great place and location for a luxury family holiday? Treehouse Vincentia is for you. We're 5 minutes from some of the best beaches in Australia. Are you trying to find a place that will accomodate a yoga retreat or martial arts practise space? Vincentia Treehouse's Tatami Room has enough room for up to 10 people to practise, overlooking beach views.")
+        meta(name="google-site-verification" content="1pkE36UC47oa1zT90irmHjFDm8PVuD9TNPAlkE8kVz8")
         link(href="css/main.css", rel="stylesheet")
         script(src="js/modernizr.js")
 
