--- a/_about.jade
+++ b/_about.jade
@@ -1,11 +1,11 @@
 .row
     .large-4.column
-        h3 About Treehouse Vincentia
+        h3 About Tree House Vincentia
     .large-8.column
         :markdown
-            Just 2.5 hours from Sydney, set in the tranquil environs of Jervis Bay & its captivating National Parks and with all the conveniences of home, Treehouse Vincentia is just minutes from the pristine beaches of Greenfields & Blenheim, & the famous White Sands Walk—which stretches from Huskisson to Hyams Beach.
+            Just 2.5 hours from Sydney, set in the tranquil environs of Jervis Bay & its captivating National Parks and with all the conveniences of home, Tree House Vincentia is just minutes from the pristine beaches of Greenfields & Blenheim, & the famous White Sands Walk—which stretches from Huskisson to Hyams Beach.
 
-            Treehouse Vincentia accommodates up to 10 people, and has 5 bedrooms, two separate living areas, 3 bathrooms & fully equipped kitchen & dining facilities.
+            Tree House Vincentia accommodates up to 10 people, and has 5 bedrooms, two separate living areas, 3 bathrooms & fully equipped kitchen & dining facilities.
 
         h4 Summer Retreat
         :markdown
@@ -13,8 +13,8 @@
 
         h4 Winter Retreat
         :markdown
-            Treehouse Vincentia is close to many bush tracks & walks, including the popular White Sands Walk to Huskisson or Hyams. Vincentia Golf Club is just minutes away. Keep warm and toasty at the Treehouse with a roaring fire in its welcome combustion fireplace.
+            Tree House Vincentia is close to many bush tracks & walks, including the popular White Sands Walk to Huskisson or Hyams. Vincentia Golf Club is just minutes away. Keep warm and toasty at the Tree House with a roaring fire in its welcome combustion fireplace.
 
         h4 Yoga Retreat
         :markdown
-            Looking for a venue to host your yoga, meditation, pilates or judo retreat? Adjoining Treehouse Vincentia is the Tatami Room (35 square metres with 15 full-size 2x1m mats) with it's own kitchenette and bathroom. Additional cost $500/week.
+            Looking for a venue to host your yoga, meditation, pilates or judo retreat? Adjoining Tree House Vincentia is the Tatami Room (35 square metres with 15 full-size 2x1m mats) with it's own kitchenette and bathroom. Additional cost $500/week.
