--- a/_nearby.jade
+++ b/_nearby.jade
@@ -4,7 +4,7 @@
     .large-8.column
         h4 By the beach
         :markdown
-            The Treehouse lies between Greenfields & Blenheim Beaches. From the rear of the house through the trees you can see the Beach Reserve to Blenheim Beach. A few moments south is Greenfields Beach, our personal favourite.
+            The Tree House lies between Greenfields & Blenheim Beaches. From the rear of the house through the trees you can see the Beach Reserve to Blenheim Beach. A few moments south is Greenfields Beach, our personal favourite.
 
             Both beaches branch from the White Sands Walk which continues North all the way to Huskisson (with many other beaches along the way) & South to Hyams Beach. From Greenfields Beach there is a ten minute bush track through to Chinamans Beach & Hyams.
 
@@ -23,4 +23,4 @@
 
             *Family feeds.* If it's a simple family feed there's great Chinese (esp roast duck) up at the Vincentia Golf Club, the usual fare at the RSL Club in Huskisson, or top notch pub meals at the refurbished Husky Pub (the latter two have the best views in town). The best Pizzeria is Faro Bianco, also in Huskisson.
 
-            *Cook for yourself.* Or you can purchase your supplies and cook up a feast at the Treehouse! The choice is yours.
+            *Cook for yourself.* Or you can purchase your supplies and cook up a feast at the Tree House! The choice is yours.
