--- a/_pictures.jade
+++ b/_pictures.jade
@@ -1,6 +1,6 @@
 .row
     .large-4.column
-        h3 Picture Gallery
+        h3 Gallery
     .large-8.column
         h4 The Location
         ul.clearing-thumbs.small-block-grid-2.medium-block-grid-4.large-block-grid-3(data-clearing='')
