--- a/index.jade
+++ b/index.jade
@@ -5,7 +5,7 @@ header#home
         .headline
             .container
                 h1.title(style='white-space:pre;')
-                    | Treehouse
+                    | Tree House
                     | at Vincentia
                 .rule
                 h2.subtitle A retreat in Jervis Bay, New South Wales.
@@ -23,7 +23,7 @@ nav("data-0"="border-bottom:1px solid rgba(85,85,85,1)", "data-500"="border-bott
                 dd(data-magellan-arrival='location')
                     a(href='##location|500') Location
                 dd(data-magellan-arrival='pictures')
-                    a(href='##pictures|500') Pictures
+                    a(href='##pictures|500') Gallery
                 dd(data-magellan-arrival='thingstodo')
                     a(href='##thingstodo|500') Nearby
                 dd(data-magellan-arrival='inside')
@@ -67,12 +67,8 @@ section("data-0"="background:rgb(50,57,64)", "data-400"="background:rgb(245,245,
                     h3 Bookings
                 .large-8.column
                     :markdown
-                        Our bookings are managed with
-                        [Stayz.](href='http://www.stayz.com.au/98466')
-                        Got questions? Get in touch by emailing
-                        [Angel](href='mailto:angel@artechne.com.au')
-                        or
-                        [Iona](href='mailto:angel@artechne.com.au').
+                        For further enquiries or to make a booking, email
+                        [Iona](mailto:iona@artechne.com.au).
 
                     p.buttonholder
                         a.Button.Button--contact.Button--highlight(href='http://www.stayz.com.au/98466') Click to Book
@@ -83,10 +79,10 @@ section("data-0"="background:rgb(50,57,64)", "data-400"="background:rgb(245,245,
                     .rule.dark
                     :markdown
                         © Artechne 2013. For more information, contact
-                        [Angel Roumelitis.](href='mailto:angel@artechne.com.au')
+                        [Iona Roumelitis.](mailto:iona@artechne.com.au)
 
-                        The Treehouse was designed and built by
-                        [Artechne.](href='http://artechne.com.au')
+                        The Tree House was designed and built by
+                        [Artechne.](http://artechne.com.au)
                         This website by
-                        [Callum Flack.](href='http://callumflack.com')
+                        [Callum Flack.](http://callumflack.com)
 
